# gengallery

./: .gitignore  Makefile  config.example.yaml  config.yaml.example  package-lock.json  package.json  pyproject.toml  requirements.txt
.cursor/rules/: ai_process_README.md  development_protocol.mdc
docs/: README.md  base_path_spec.md  specs.md  specs_enc.md  specs_faces.md
docs/example_gallery/: gallery.yaml  waves.yaml
fixtures/crypto/: v1_vectors.json
src/gengallery/: __init__.py  __main__.py  cli.py  constants.py  errors.py  pathing.py  validation.py
src/gengallery/assets/: __init__.py
src/gengallery/assets/scaffold/: package.json
src/gengallery/assets/scaffold/galleries/example/: gallery.yaml  lightbulb.yaml
src/gengallery/assets/templates/: 404.html.jinja  encrypted_gallery.html.jinja  encrypted_image.html.jinja  encrypted_video.html.jinja  gallery.html.jinja  gallery_login.html.jinja  image.html.jinja  index.html.jinja  person_pills.html.jinja  video.html.jinja
src/gengallery/assets/templates/tailwind/: tailwind.css
src/gengallery/commands/: __init__.py  faces.py  init.py  push.py  serve.py  update.py
src/gengallery/services/: __init__.py  crypto_v1.py  deploy_ssh.py  face_labeling.py  face_matching.py  face_models.py  face_processor.py  gallery_paths.py  gallery_processor.py  generator.py  image_processor.py  init_scaffold.py  npm_install.py  pipeline_types.py  progress_display.py  scaffold_assets.py  serve.py  template_helpers.py  update.py  urls.py  video_processor.py
templates/: 404.html.jinja  encrypted_gallery.html.jinja  encrypted_image.html.jinja  encrypted_video.html.jinja  gallery.html.jinja  gallery_login-spec.html.jinja  gallery_login.html.jinja  image.html.jinja  index.html.jinja  site.css  site.js
templates/tailwind/: tailwind.config.js  tailwind.css
tests/js/: crypto-vectors.test.mjs  site-runtime-safety.test.mjs
tests/python/: test_base_path.py  test_cli_dispatch.py  test_cli_errors.py  test_cli_parser.py  test_cli_path_semantics.py  test_crypto_vectors.py  test_deploy_ssh.py  test_face_export.py  test_face_incremental.py  test_face_labeling.py  test_face_list_unnamed.py  test_face_matching.py  test_face_models.py  test_gallery_paths.py  test_gallery_processor_faces.py  test_generator_timeline.py  test_init_command.py  test_npm_install.py  test_package_data.py  test_pathing.py  test_progress_display.py  test_repo_root_safety.py  test_resolve_image_id.py  test_scaffold_assets.py  test_site_htpasswd.py  test_template_helpers.py  test_update_orchestrator.py  test_video_encoding.py
